--- a/PIDev_java/src/UI/OffreUI/OffreCandidatFXML.fxml
+++ b/PIDev_java/src/UI/OffreUI/OffreCandidatFXML.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="462.0" prefWidth="765.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.OffreFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="462.0" prefWidth="765.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UI.OffreUI.OffreCandidatFXMLController">
    <children>
       <VBox prefHeight="456.0" prefWidth="192.0" style="-fx-background-color: #ad0505;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -31,7 +31,7 @@
                   <FontAwesomeIconView fill="WHITE" glyphName="GG" layoutY="56.0" size="60" text="" wrappingWidth="55.57142639160156" />
                </children>
             </Pane>
-            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Home" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+            <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#home" opacity="0.7" prefHeight="45.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="Home" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                <font>
                   <Font name="Berlin Sans FB" size="13.0" />
                </font>
@@ -102,8 +102,8 @@
             </Button>
          </children>
       </VBox>
-      <ListView fx:id="offreListe" layoutX="192.0" layoutY="117.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="351.0" prefWidth="573.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="117.0" />
-      <Pane layoutX="192.0" layoutY="47.0" opacity="0.89" prefHeight="70.0" prefWidth="649.0" style="-fx-background-color: #ad0505;" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="0.0">
+      <ListView fx:id="listOffre" layoutX="192.0" layoutY="117.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="351.0" prefWidth="573.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="117.0" />
+      <Pane layoutX="192.0" layoutY="47.0" prefHeight="70.0" prefWidth="649.0" style="-fx-background-color: #ad0505;" AnchorPane.leftAnchor="192.0" AnchorPane.rightAnchor="0.0">
          <children>
             <HBox layoutX="6.0" layoutY="22.0" prefHeight="41.0" prefWidth="513.0">
                <children>
