--- a/PIDev_java/src/UI/UI_User/Login.fxml
+++ b/PIDev_java/src/UI/UI_User/Login.fxml
@@ -123,7 +123,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="USER" size="14.0" />
                      </graphic>
                   </Button>
-                  <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#rendezVous" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="A porpos" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
+                  <Button alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onMouseClicked="#apropos" opacity="0.7" prefHeight="49.0" prefWidth="181.0" style="-fx-background-color: #ad0505;" text="A porpos" textFill="WHITE" textOverrun="WORD_ELLIPSIS">
                      <graphic>
                         <FontAwesomeIconView fill="WHITE" glyphName="PENCIL" size="14.0" />
                      </graphic>
